--- a/index-contenido.html
+++ b/index-contenido.html
@@ -131,7 +131,7 @@
                     color: #fff;
                     font: 17px/1.2 arial;
                     margin: 10px auto;
-                    max-width: 150px;
+                    max-width: 200px;
                     text-align: center;
                 }
             .main-indicacion.fade-out {
@@ -162,7 +162,7 @@
         <div class="box-ctn-indicacion">
             <img src="./img/scroll-icon.png" alt="" width="100%">
             <p>
-                Haz scroll para cambiar de imagen
+                Haz scroll hacia abajo para cambiar de imagen
             </p>
         </div>
     </div>
@@ -217,11 +217,11 @@
             // Cargar imágenes en espiral con enlaces correspondientes y títulos
             const images = [
                 { url: './img/bg-centro-2.png', link: 'https://www.example.com/page1', title: '' },
-                { url: './img/bg-2.jpg', link: 'https://www.example.com/page2', title: 'Título 2' },
-                { url: './img/bg-3.jpg', link: 'https://www.example.com/page3', title: 'Título 3' },
-                { url: './img/bg-4.jpg', link: 'https://www.example.com/page4', title: 'Título 4' },
-                { url: './img/bg-5.jpg', link: 'https://www.example.com/page5', title: 'Título 5' },
-                { url: './img/bg-5.jpg', link: 'https://www.example.com/page5', title: 'Título 6' }
+                { url: './img/bg-2.jpg', link: 'https://www.example.com/page2', title: '' },
+                { url: './img/bg-3.jpg', link: 'https://www.example.com/page3', title: '' },
+                { url: './img/bg-4.jpg', link: 'https://www.example.com/page4', title: '' },
+                { url: './img/bg-5.jpg', link: 'https://www.example.com/page5', title: '' },
+                { url: './img/bg-5.jpg', link: 'https://www.example.com/page5', title: '' }
             ]
 
             const loader = new THREE.TextureLoader()
@@ -295,60 +295,106 @@
             }
             })
 
-            // Manejo del scroll para controlar solo la rotación
-            window.addEventListener('scroll', () => {
-                const scrollY = window.scrollY;
-                const scrollHeight = document.documentElement.scrollHeight - window.innerHeight;
-                const scrollFactor = scrollY / scrollHeight;
+            // Manejo del scroll o swipe para controlar la rotación continua
+let rotationSpeed = 0; // Variable para manejar la velocidad de rotación
 
-                const maxRotation = Math.PI * 2 * (images.length - 1) / images.length;
-                group.rotation.y = scrollFactor * maxRotation;
+window.addEventListener('wheel', (event) => {
+    const scrollAmount = event.deltaY * 0.0008; // Reducción del factor de scroll para rotación más lenta
+    rotationSpeed += scrollAmount; // Ajusta la rotación basada en el scroll
 
-                // Mostrar el título solo cuando la imagen está centrada
-                let closestImageIndex = -1;
-                let minAngleDifference = Infinity;
+    // Rotación infinita: ajuste de la rotación sin límites
+    group.rotation.y += rotationSpeed; 
 
-                group.children.forEach((plane, index) => {
-                    // Calcular la diferencia angular entre la rotación actual y la posición del objeto
-                    const planeAngle = (index / images.length) * Math.PI * 2;
-                    const groupRotation = group.rotation.y % (Math.PI * 2);
-                    const angleDifference = Math.abs(groupRotation - planeAngle);
+    // Mostrar el título solo cuando la imagen está centrada
+    let closestImageIndex = -1;
+    let minAngleDifference = Infinity;
 
-                    if (angleDifference < minAngleDifference) {
-                        minAngleDifference = angleDifference;
-                        closestImageIndex = index;
-                    }
-                });
+    group.children.forEach((plane, index) => {
+        const planeAngle = (index / images.length) * Math.PI * 2;
+        const groupRotation = group.rotation.y % (Math.PI * 2); // Módulo para permitir rotación infinita
+        const angleDifference = Math.abs(groupRotation - planeAngle);
 
-                // Si la imagen más cercana cambia, la mostramos en la consola
-                if (closestImageIndex !== currentImageIndex) {
-                    currentImageIndex = closestImageIndex;
-                    const currentImage = group.children[currentImageIndex].userData;
+        if (angleDifference < minAngleDifference) {
+            minAngleDifference = angleDifference;
+            closestImageIndex = index;
+        }
+    });
 
-                    // Mostrar el título en el HTML
-                    titleElement.innerText = currentImage.title;
-                    titleElement.style.opacity = 1;
+    // Si la imagen más cercana cambia, actualizamos el título
+    if (closestImageIndex !== currentImageIndex) {
+        currentImageIndex = closestImageIndex;
+        const currentImage = group.children[currentImageIndex].userData;
 
-                    // Log de la imagen que está más adelante
-                    console.log(`La imagen que está al frente es: ${currentImage.title}`);
-                }
-            });
+        // Mostrar el título en el HTML
+        titleElement.innerText = currentImage.title;
+        titleElement.style.opacity = 1;
+        console.log(`La imagen que está al frente es: ${currentImage.title}`);
+    }
+});
+
+// Funcionalidad de "swipe" y arrastre para escritorio
+let isDragging = false;
+let previousMousePosition = { x: 0, y: 0 };
+
+window.addEventListener('mousedown', (event) => {
+    isDragging = true;
+    previousMousePosition.x = event.clientX;
+});
+
+window.addEventListener('mousemove', (event) => {
+    if (isDragging) {
+        const deltaX = event.clientX - previousMousePosition.x;
+        rotationSpeed = deltaX * 0.002; // Reducción del factor de arrastre para rotación más lenta
+        group.rotation.y += rotationSpeed; // Rotar el grupo en función del arrastre
+        previousMousePosition.x = event.clientX;
+    }
+});
+
+window.addEventListener('mouseup', () => {
+    isDragging = false;
+});
+
+// Funcionalidad de "swipe" y arrastre para dispositivos móviles (touch)
+let isTouching = false;
+let previousTouchPosition = { x: 0, y: 0 };
+
+window.addEventListener('touchstart', (event) => {
+    isTouching = true;
+    previousTouchPosition.x = event.touches[0].clientX; // Capturamos la posición inicial del toque
+});
+
+window.addEventListener('touchmove', (event) => {
+    if (isTouching) {
+        const deltaX = event.touches[0].clientX - previousTouchPosition.x;
+        rotationSpeed = deltaX * 0.002; // Reducción del factor para la rotación lenta en móviles
+        group.rotation.y += rotationSpeed; // Rotación basada en el desplazamiento táctil
+        previousTouchPosition.x = event.touches[0].clientX;
+    }
+});
+
+window.addEventListener('touchend', () => {
+    isTouching = false;
+});
+
+// Animación de la escena
+const animate = () => {
+    rotationSpeed *= 0.95; // Reducir gradualmente la velocidad de rotación
+    group.rotation.y += rotationSpeed; // Rotación continua
+
+    requestAnimationFrame(animate);
+    composer.render();
+};
+animate();
+
+// Manejo de redimensionamiento
+window.addEventListener('resize', () => {
+    camera.aspect = window.innerWidth / window.innerHeight;
+    camera.updateProjectionMatrix();
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    composer.setSize(window.innerWidth, window.innerHeight);
+});
 
 
-            // Animación de la escena
-            const animate = () => {
-                requestAnimationFrame(animate)
-                composer.render()
-            }
-            animate()
-
-            // Manejo de redimensionamiento
-            window.addEventListener('resize', () => {
-                camera.aspect = window.innerWidth / window.innerHeight
-                camera.updateProjectionMatrix()
-                renderer.setSize(window.innerWidth, window.innerHeight)
-                composer.setSize(window.innerWidth, window.innerHeight)
-            })
     </script>
 
 </body>
