--- a/index-contenido.html
+++ b/index-contenido.html
@@ -266,7 +266,7 @@
 
             const loader = new THREE.TextureLoader()
             const radius = 3.3
-            const verticalSpacing = 0.11
+            const verticalSpacing = 0.12
             const totalRotation = Math.PI * 2.3
             const startAngle = Math.PI / 2
             let currentImageIndex = -1
@@ -298,7 +298,7 @@
                 })
             }   
             else if (index === 2) {
-                // Segunda imagen: PNG con transparencia y geometría personalizada
+                // Tercera imagen: PNG con transparencia y geometría personalizada
                 geometry = new THREE.PlaneGeometry(1.0, 1.0, 1.0, 2.0) // Cambia las dimensiones si es necesario
                 material = new THREE.MeshBasicMaterial({
                     map: texture,
