--- a/index-contenido.html
+++ b/index-contenido.html
@@ -266,7 +266,7 @@
 
             // Cargar imagen de fondo
             const loader = new THREE.TextureLoader();
-            const backgroundTexture = loader.load('./img/bg-test.jpg'); // Cambia la ruta por tu imagen de fondo
+            const backgroundTexture = loader.load('./img/bg-test-2.jpg'); // Cambia la ruta por tu imagen de fondo
             const radius = 3.3
             const verticalSpacing = 0.125
             const totalRotation = Math.PI * 2.3
