--- a/index-contenido.html
+++ b/index-contenido.html
@@ -253,7 +253,7 @@
                 { url: './img/maquina.png', link: 'https://www.example.com/page1', title: '' },
                 { url: './img/libro.png', link: 'https://www.example.com/page2', title: '' },
                 { url: './img/bg-4.png', link: 'https://www.example.com/page3', title: ''  },
-                { url: './img/bg-5.jpg', link: 'https://www.example.com/page4', title: '' },
+                { url: './img/bg-5.jpg', link: 'https://www.example.com/page4', title: 'test 4' },
                 { url: './img/bg-5.jpg', link: 'https://www.example.com/page5', title: ''  },
                 { url: './img/bg-1.jpg', link: 'https://www.example.com/page6', title: ''  },
                 { url: './img/bg-2.jpg', link: 'https://www.example.com/page7', title: '' },
