--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             transform: translateX(-50%);
             font-size: 24px;
             font-family: Arial, sans-serif;
-            color: #fff;
+            color: #000;
             opacity: 0;
             transition: opacity 0.3s ease;
         }
