--- a/index-contenido.html
+++ b/index-contenido.html
@@ -258,15 +258,15 @@
                 { url: './img/maquina.png', link: 'https://www.example.com/page1', title: '' },
                 { url: './img/libro.png', link: 'https://www.example.com/page2', title: '' },
                 { url: './img/bg-4-2.png', link: 'https://www.example.com/page3', title: ''  },
-                { url: './img/bg-5.jpg', link: 'https://www.example.com/page4', title: 'título 4' },
-                { url: './img/bg-5.jpg', link: 'https://www.example.com/page5', title: 'título 5'  },
-                { url: './img/bg-1.jpg', link: 'https://www.example.com/page6', title: 'título 6'  },
-                { url: './img/bg-2.jpg', link: 'https://www.example.com/page7', title: 'título 7' },
-                { url: './img/bg-3.jpg', link: 'https://www.example.com/page8', title: 'título 8'  },
-                { url: './img/bg-4.jpg', link: 'https://www.example.com/page9', title: 'título 9' },
-                { url: './img/bg-5.jpg', link: 'https://www.example.com/page10', title: 'título 10' },
-                { url: './img/bg-1.jpg', link: 'https://www.example.com/page11', title: 'título 11'  },
-                { url: './img/bg-2.jpg', link: 'https://www.example.com/page12', title: 'título 12'  }
+                { url: './img/bg-5.jpg', link: 'https://www.example.com/page4', title: '' },
+                { url: './img/bg-5.jpg', link: 'https://www.example.com/page5', title: ''  },
+                { url: './img/bg-1.jpg', link: 'https://www.example.com/page6', title: ''  },
+                { url: './img/bg-2.jpg', link: 'https://www.example.com/page7', title: '' },
+                { url: './img/bg-3.jpg', link: 'https://www.example.com/page8', title: ''  },
+                { url: './img/bg-4.jpg', link: 'https://www.example.com/page9', title: '' },
+                { url: './img/bg-5.jpg', link: 'https://www.example.com/page10', title: '' },
+                { url: './img/bg-1.jpg', link: 'https://www.example.com/page11', title: ''  },
+                { url: './img/bg-2.jpg', link: 'https://www.example.com/page12', title: ''  }
             ]
 
             // Cargar imagen de fondo
