--- a/index.html
+++ b/index.html
@@ -157,9 +157,13 @@
 <body>
     <div class="main-intro">
         <div class="box-pantalla-inicio">
-            <h1>
+            <!--<h1>
                 <span>Mario Vargas Llosa</span>
                El escritor universal
+            </h1>-->
+            <h1>
+                <span>El escritor universal</span>
+                Mario Vargas Llosa
             </h1>
             <img class="flecha" src="./img/flecha-bajar.png" alt="" width="100%">
         </div>
