--- a/index-contenido.html
+++ b/index-contenido.html
@@ -108,7 +108,7 @@
         }
 
         .main-indicacion{
-            background-color: rgba(0, 0, 0, 0.9);
+            background-color: rgba(255, 255, 255, 0.9);
             height: 100%;
             opacity: 1;            
             position: fixed;
@@ -128,7 +128,7 @@
                     max-width: 20px;
                 }
                 .box-ctn-indicacion p{
-                    color: #fff;
+                    color: rgb(59, 59, 59);
                     font: 17px/1.2 arial;
                     margin: 10px auto;
                     max-width: 200px;
@@ -166,8 +166,6 @@
             #indicacion-movil{
                 display: block;
             }
-
-
             .box-pantalla-inicio h1{
                 font-size: 4.5rem;
                 line-height: 0.9;
@@ -187,14 +185,14 @@
     
     <div class="main-indicacion">
         <div class="box-ctn-indicacion" id="indicacion-desktop">
-            <img src="./img/scroll-icon.png" alt="" width="100%">
+            <img src="./img/scroll-icon-2.png" alt="" width="100%">
             <p>
                 Haz scroll hacia abajo para cambiar de imagen
             </p>
         </div>
 
         <div class="box-ctn-indicacion" id="indicacion-movil">
-            <img src="./img/scroll-icon-movil.png" alt="" width="100%">
+            <img src="./img/scroll-icon-movil-2.png" alt="" width="100%">
             <p>
                 Haz scroll hacia los lados para cambiar de imagen
             </p>
