--- a/menu/index.html
+++ b/menu/index.html
@@ -16,7 +16,7 @@
 
     <div class="box-titular-interior">
         <h4>
-            <span>El escritor universial</span>            
+            <span>El escritor universal</span>            
             mario vargas llosa
         </h4>
     </div>
